welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:17: error: ';' expected but 'else' found.
		else if (estFaceMur && diag
                ^Diagonal:36: error: expected start of definition
	override def forward(i:Int)  { 
                 ^Diagonal:39: error: expected start of definition
	override def forward()  {
                 ^Diagonal:42: error: expected start of definition
	override def backward(i:Int) {
                 ^Diagonal:45: error: expected start of definition
	override def backward() {
                 ^Diagonal:48: error: Unmatched closing brace '}' ignored here
}
^